# hw-1-py2-pizza1

./: index.html  main.py  page2.html  pyproject.toml  style.css
templates/: index.html  page2.html
