[tool.poetry]
name = "pizza-1"
version = "0.1.0"
description = ""
authors = ["Andrew2797 <andrijgolub27@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
